[workspace]
members = ["restate-cron", "restate-cron-server"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.9.0"
description = "Restate cron service"
license = "MIT"
repository = "https://github.com/sagikazarmark/restate-cron"
homepage = "https://github.com/sagikazarmark/restate-cron"

[workspace.dependencies]
anyhow = "1.0"
restate-sdk = { version = "0.7", features = ["schemars"] }
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "Release {{version}}"
tag-prefix = ""
