[package]
name = "restate-cron-server"
edition = { workspace = true }
version = { workspace = true }
description = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false

[[bin]]
name = "restate-cron"
path = "src/main.rs"

[package.metadata.release]
publish = false

[dependencies]
restate-cron = { path = "../restate-cron" }

anyhow = { workspace = true }
clap = { version = "4.5.56", features = ["derive", "env"] }
figment = { version = "0.10.19", features = ["env", "json", "toml", "yaml"] }
humantime-serde = "1.1"
restate-sdk = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
