[package]
name = "restate-cron"
edition = { workspace = true }
version = { workspace = true }
description = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
content_disposition = "0.4"
cron = { version = "0.17", features = ["serde"] }
futures = "0.3"
restate-sdk = { workspace = true, features = ["hyper", "schemars"] }
rhai = { version = "1.24", features = ["serde", "sync"] }
rhai-chrono = { version = "0.1", features = ["sync"] }
schemars = { workspace = true, features = ["chrono04", "jiff02", "url2"] }
serde = { workspace = true }
serde_json = { workspace = true }
